<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.socialsirius.messenger.ui.auth.AuthSecurityViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:padding="12dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/logo_sirius"
            android:id="@+id/icon"
            />

        <TextView
            android:id="@+id/firstTitle"
            style="@style/Regular19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/auth_second_title"

            android:textColor="@color/black" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passhrase_hint"
            style="@style/FontBold"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/colorBlue2"/>

        <TextView
            android:id="@+id/showBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:padding="8dp"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorBlue2"
            style="@style/AccentButtonRoundedCorners"
            android:onClick="@{viewModel::showNow}"
            android:text="@string/auth_btn_phrase_show_now"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pin_create_hint"
            style="@style/FontBold"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/colorBlue2"/>

        <TextView
            android:id="@+id/createPinBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:padding="8dp"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorBlue2"
            style="@style/AccentButtonRoundedCorners"
            android:onClick="@{viewModel::createPinClick}"
            android:text="@string/auth_second_create_pin_btn"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/nextBtn"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:padding="16dp"
            android:layout_margin="32dp"
            style="@style/AccentButtonRoundedBigCorners"
            android:onClick="@{viewModel::onStartClick}"
            android:text="@string/auth_btn_start_chat"
            />



    </LinearLayout>
</layout>