<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor">

    <Button
        android:id="@+id/resendButton"
        style="@style/Body1"
        android:visibility="gone"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_button_size"
        android:background="@color/backgroundColor"
        android:outlineProvider="none"
        android:drawablePadding="12dp"
        android:paddingStart="20dp"
        android:textAlignment="viewStart"
        android:text="@string/message_resend"
        android:drawableStart="@drawable/ic_replay"/>
    
    <Button
        android:id="@+id/deleteButton"
        style="@style/Body1"
        android:textAllCaps="false"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_button_size"
        android:background="@color/backgroundColor"
        android:outlineProvider="none"
        android:drawablePadding="@dimen/common_gap_16"
        android:paddingStart="@dimen/common_gap_24"
        android:textAlignment="viewStart"
        android:text="@string/task_content_delete"
        android:drawableStart="@drawable/ic_delete_default"/>

    <Button
        android:id="@+id/quoteButton"
        style="@style/Body1"
        android:textAllCaps="false"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_button_size"
        android:background="@color/backgroundColor"
        android:outlineProvider="none"
        android:drawablePadding="12dp"
        android:paddingStart="20dp"
        android:textAlignment="viewStart"
        android:text="@string/message_quote"
        android:drawableStart="@drawable/ic_close"/>

    <Button
        android:id="@+id/deleteLocallyButton"
        style="@style/Body1"
        android:textAllCaps="false"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_button_size"
        android:background="@color/backgroundColor"
        android:outlineProvider="none"
        android:drawablePadding="@dimen/common_gap_16"
        android:paddingStart="@dimen/common_gap_24"
        android:textAlignment="viewStart"
        android:text="@string/menu_fragment_messages_item_delete"
        android:drawableStart="@drawable/ic_delete_default"/>

</LinearLayout>