<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/invitationTitle"
                style="@style/Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/invitation_from" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="10dp"
                android:id="@+id/deleteBtn"
                android:visibility="invisible"
                android:src="@drawable/ic_delete_default" />
        </LinearLayout>


        <TextView
            android:id="@+id/labelText"
            style="@style/Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="" />


        <TextView
            android:id="@+id/moreBtn"
            style="@style/Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_accent_rounded_button_big_corners_borders"
            android:paddingLeft="32dp"
            android:paddingTop="8dp"

            android:paddingRight="32dp"
            android:paddingBottom="8dp"
            android:text="@string/more_detail" />


        <TextView
            android:id="@+id/receipentLabel"
            style="@style/Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/recipient_keys"
            android:visibility="gone" />

        <TextView
            android:id="@+id/receipentKeyText"
            style="@style/Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text=""
            android:visibility="gone" />

        <TextView
            android:id="@+id/endpointLabel"
            style="@style/Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/recipient_endpoint"
            android:visibility="gone" />

        <TextView
            android:id="@+id/endpointText"
            style="@style/Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text=""
            android:visibility="gone" />

        <Button
            android:id="@+id/connectButton"
            style="@style/AccentButton"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"

            android:text="@string/connect" />

    </LinearLayout>
</layout>