<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable
            name="viewModel"
            type="com.socialsirius.messenger.ui.auth.AuthViewModel" />
    </data>
    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:app="http://schemas.android.com/apk/res-auto"
                   xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:padding="12dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/logo_sirius"
            android:id="@+id/icon"
           />

        <TextView
            android:id="@+id/firstTitle"
            style="@style/Regular19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/auth_first_title"

            android:textColor="@color/black" />


        <TextView
            android:id="@+id/firstHint"
            style="@style/Regular15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="16dp"
            android:text="@string/auth_first_title_hint"
            android:textColor="@color/black" />






        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:lines="1"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:hint="Nickname"
                android:backgroundTint="@color/white"
                android:id="@+id/nameEditText"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passhrase_hint"
            style="@style/FontBold"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:textColor="@color/colorBlue2"/>

        <TextView
            android:id="@+id/showBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:padding="8dp"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorBlue2"
            style="@style/AccentButtonRoundedCorners"
            android:onClick="@{viewModel::showNow}"
            android:text="@string/auth_btn_phrase_show_now"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/nextBtn"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:padding="16dp"
            android:layout_margin="32dp"
            style="@style/AccentButtonRoundedBigCorners"
            android:onClick="@{viewModel::onStartClick}"
            android:text="@string/auth_btn_start_chat"
            />


    </LinearLayout>
</layout>