<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.socialsirius.messenger.ui.inviteUser.HandleWebInviteViewModel" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="72dp"
                android:src="@drawable/logo_sirius"
                android:id="@+id/logo"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                style="@style/Regular19"
                android:layout_margin="16dp"
                android:textColor="@color/black"
                android:visibility="@{viewModel.loadingVisibilityLiveData}"
                android:text="@string/invitation_in_progress"
                android:id="@+id/splashText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                style="@style/Regular19"
                android:layout_margin="16dp"
                android:textColor="@color/red"
                android:text="@{viewModel.errorTextLiveData}"
                android:id="@+id/errorText"/>




            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:id="@+id/progressBar"
                android:progressTint="@color/yellow"
                android:visibility="@{viewModel.loadingVisibilityLiveData}"
                android:progressBackgroundTint="@color/yellow"
                android:layout_gravity="center"/>


           <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/connectionLayout"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    style="@style/Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/invitation_from" />

                <TextView
                    style="@style/Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:id="@+id/labelText"
                    android:text="" />

                <TextView
                    style="@style/Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/recipient_keys" />

                <TextView
                    style="@style/Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:id="@+id/receipentKeyText"
                    android:text="" />

                <TextView
                    style="@style/Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/recipient_endpoint" />

                <TextView
                    style="@style/Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:id="@+id/endpointText"
                    android:text="" />

                <Button
                    android:id="@+id/connectButton"
                    style="@style/AccentButton"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"

                    android:text="@string/connect" />

            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mainLayout"/>
    </FrameLayout>

</layout>